Update: Mudar container_name para boleto-frontend
- docker-compose.yml: container_name: boleto-frontend
- Healthcheck corrigido para usar porta 3200
- README.md: Atualizar comandos com novo nome do container

Container agora tem nome fixo: boleto-frontend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       dockerfile: Dockerfile
       args:
         - BUILDKIT_INLINE_CACHE=1
-    container_name: boletoapi-frontend
+    container_name: boleto-frontend
     ports:
       - "3200:3200"
     environment:
@@ -17,7 +17,7 @@ services:
       - LETSENCRYPT_EMAIL=${LETSENCRYPT_EMAIL:-admin@boletoapi.com}
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "-H", "Host: localhost", "http://127.0.0.1/"]
+      test: ["CMD", "curl", "-f", "-H", "Host: localhost", "http://127.0.0.1:3200/"]
       interval: 30s
       timeout: 10s
       retries: 3
